--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "react-toastify": "^11.0.5",
+    "tostify": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
